# language_learning_tutor

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  ADMIN.md  Dockerfile  README.md  config.py  core_logic.py  deploy_all.sh  justfile  pyproject.toml  web_app.py
app_core/: auth.py  config.py  utils.py
handle_telegram_interaction/: config.py  deploy.sh  main.py  pyproject.toml  requirements.txt  utils.py
scratch/: purge_all_data.py
send_daily_choice_request/: config.py  deploy.sh  main.py  pyproject.toml  requirements.txt  utils.py
static/: index.html  script.js  style.css
tests/: __init__.py  test_core_logic.py  test_utils.py
